fix cycling of UNKOWN/ONLINE for smarthome devices
Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>